# DE3Robotics

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
devel/lib/baxter_sim_hardware/: baxter_emulator
devel/lib/baxter_sim_io/: baxter_sim_io
src/coursework_1/: CMakeLists.txt
src/coursework_3/deniro_sim_ws/src/deniro_simulator/deniro_gazebo/: package.xml
src/coursework_3/deniro_sim_ws/src/deniro_simulator/deniro_gazebo/launch/: deniro_spawn.launch  deniro_world.launch  office_world.launch
src/coursework_3/deniro_sim_ws/src/deniro_simulator/deniro_gazebo/models/Floor_room/: model.sdf
src/coursework_3/deniro_sim_ws/src/deniro_simulator/deniro_gazebo/worlds/: my_workshop.world  office_env.world
(+126 files in other folders)
