<?xml version="1.0"?>
<package format="2">
  <name>deniro_gazebo</name>
  <version>0.0.0</version>
  <description>The deniro_gazebo package</description>

  <maintainer email="ron@todo.todo">ron</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_gazebo</exec_depend>
  <exec_depend>baxter_interface</exec_depend>
  <exec_depend>baxter_tools</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
  
</package>
